# Delta-V

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  autocoder.py  bootstrap.sh  dictionary.json  dv-util.py  gds_dash.py  requirements.txt  topology.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: benchmark_main.cpp
docs/: ARCHITECTURE.md  ASSESS_DELTA_V.md  BENCHMARK_BASELINE.json  BENCHMARK_BASELINE.md  BENCHMARK_PROTOCOL.md  BENCHMARK_THRESHOLDS.json  BENCHMARK_THRESHOLDS_CI.json  BENCHMARK_TREND_BASELINE.json  BENCHMARK_TREND_BASELINE_CI.json  CIVILIAN_USE_POLICY.md  COMPONENT_MODEL.md  COVERAGE_POLICY.md  COVERAGE_RAMP_PLAN.md  COVERAGE_THRESHOLDS.json  CUBESAT_READINESS_STATUS.json  CUBESAT_READINESS_STATUS.md  CUBESAT_READINESS_STATUS_SCOPE.json  CUBESAT_READINESS_STATUS_SCOPE.md  CUBESAT_TEAM_READINESS.md  DEVELOPER_GUIDE.md  ESP32_BRINGUP.md  ESP32_GOLDEN_IMAGE_BOOTCHAIN.md  ESP32_RUNTIME_THRESHOLDS.json  ESP32_SENSORLESS_BASELINE.md  EXPORT_CONTROL_NOTE.md  HIGH_ASSURANCE_ROADMAP.md  ICD.md  LEGAL_FAQ.md  LEGAL_SCOPE_CHECKLIST.md  MAINTAINER_BOUNDARY_POLICY.md  MIGRATION_GUIDE.md  MISSION_ASSURANCE_CHECKLIST.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PORTS_AND_MESSAGES.md  QUICKSTART_10_MIN.md  README.md  REFERENCE_MISSION_WALKTHROUGH.md  RELEASE_NOTES_20260307.md  RELEASE_NOTES_20260308.md  RELEASE_POLICY.md  (+12 more)
docs/evidence/: ESP32_SENSORLESS_EVIDENCE_20260307.md  ESP32_SENSOR_ATTACHED_EVIDENCE_20260307.md  ESP32_SENSOR_ATTACHED_EVIDENCE_TEMPLATE.md  SIM_OPERATIONS_EVIDENCE_20260307.md
docs/process/: ASSUMPTIONS_LOG_BASELINE.md  CCB_RELEASE_SIGNOFF_20260307.md  CERTIFICATION_BASELINE.md  COMMS_LINK_VALIDATION_20260307.md  COMMS_LINK_VALIDATION_TEMPLATE.md  CONFIGURATION_AUDIT_BASELINE.md  DEPLOYMENT_SCREENING_LOG_20260307.md  DEPLOYMENT_SCREENING_PROCEDURE.md  EXTERNAL_ASSURANCE_APPLICABILITY_BASELINE.md  FLIGHT_ENV_TEST_MATRIX_20260307.md  FLIGHT_ENV_TEST_MATRIX_TEMPLATE.md  INDEPENDENT_REVIEW_RECORD_20260307.md  NASA_REQUIREMENTS_APPLICABILITY_BASELINE.md  OPERATIONS_READINESS_20260307.md  OPERATIONS_READINESS_TEMPLATE.md  OPERATIONS_REHEARSAL_20260314.md  OPERATIONS_RUNBOOK.md  PROBLEM_REPORT_AND_CORRECTIVE_ACTION_LOG.md  PSAC_DELTAV_BASELINE.md  PSAC_TEMPLATE.md  PUBLIC_SECURITY_POSTURE_BASELINE.md  REFERENCE_MISSION_INTERFACE_CONTROL.md  REFERENCE_MISSION_PROFILE.md  REFERENCE_MISSION_REQUIREMENTS_ALLOCATION.md  REFERENCE_PAYLOAD_PROFILE.md  RELEASE_MANIFEST_20260307.md  RELEASE_MANIFEST_TEMPLATE.md  RELEASE_PREFLIGHT_CURRENT.json  RELEASE_PREFLIGHT_CURRENT.md  RISK_REGISTER_BASELINE.md  SCMP_DELTAV_BASELINE.md  SCMP_TEMPLATE.md  SECRETS_SCAN_20260308.md  SITL_LONG_SOAK_STATUS.json  SITL_LONG_SOAK_STATUS.md  SOFTWARE_CLASSIFICATION_BASELINE.md  SOFTWARE_SAFETY_PLAN_BASELINE.md  SQAP_DELTAV_BASELINE.md  SQAP_TEMPLATE.md  STATIC_ANALYSIS_DEVIATION_LOG.md  (+4 more)
docs/safety_case/: README.md  change_impact.md  fmea.md  fta.md  hazards.md  mitigations.md  verification_links.md
examples/: README.md
examples/cubesat_attitude_control/: README.md
gds/: dictionary.json  gds_dash.py
ports/esp32/: CMakeLists.txt  README.md  partitions_golden.csv  sdkconfig  sdkconfig.defaults
ports/esp32/main/: CMakeLists.txt  app_main.cpp
src/: AtsRtsSequencerComponent.hpp  CfdpComponent.hpp  Cobs.hpp  CommandHub.hpp  CommandSequencerComponent.hpp  Component.hpp  EventHub.hpp  FileTransferComponent.hpp  Hal.hpp  HeapGuard.cpp  HeapGuard.hpp  I2cDriver.hpp  ImuComponent.hpp  LimitCheckerComponent.hpp  LoggerComponent.hpp  MemoryDwellComponent.hpp  MissionFsm.hpp  ModeManagerComponent.hpp  Os.hpp  Os_FreeRTOS.hpp  OtaComponent.hpp  ParamDb.hpp  PayloadMonitorComponent.hpp  PlaybackComponent.hpp  Port.hpp  PowerComponent.hpp  RateGroupExecutive.hpp  Requirements.hpp  RingBuffer.hpp  Scheduler.hpp  SensorComponent.hpp  Serializer.hpp  TelemHub.hpp  TelemetryBridge.hpp  TimeService.hpp  TimeSyncComponent.hpp  TmrStore.hpp  TopologyManager.hpp  Types.hpp  WatchdogComponent.hpp  (+1 more)
tests/: system_tests.cpp  tidy_headers.cpp  unit_tests.cpp
tools/: autocoder.py  benchmark_guard.py  benchmark_report.py  benchmark_trend_guard.py  configure_coverage_build.sh  coverage_guard.py  coverage_trend.py  cubesat_readiness_report.py  dv-util.py  esp32_reboot_campaign.py  esp32_runtime_guard.py  esp32_soak.py  golden_bootchain_check.py  legal_compliance_check.py  portability_matrix.py  qualification_report.py  quickstart_10min.sh  release_pedigree.py  requirements_trace.py  review_bundle.py  safety_case_check.py  sitl_fault_campaign.py  sitl_long_soak_status.py  sitl_smoke.py  sitl_soak.py  software_final_check.py  team_ready_esp32.py
